--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>QuickFix Tech Solutions | Reliable Computer Repair Services</title>
     <meta name="description" content="QuickFix Tech Solutions offers fast, affordable, and reliable computer repair services near you. Get your devices fixed today!">
     <meta name="keywords" content="computer repair, tech support, laptop repair, QuickFix Tech Solutions, virus removal">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
