--- a/index.html
+++ b/index.html
@@ -6,7 +6,80 @@
     <title>QuickFix Tech Solutions | Reliable Computer Repair Services</title>
     <meta name="description" content="QuickFix Tech Solutions offers fast, affordable, and reliable computer repair services near you. Get your devices fixed today!">
     <meta name="keywords" content="computer repair, tech support, laptop repair, QuickFix Tech Solutions, virus removal">
-    <link rel="stylesheet" href="style.css">
+    
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body Styling */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
+        }
+
+        /* Header */
+        header {
+            background-color: #004466;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        /* Headings */
+        h1 {
+            font-size: 2em;
+        }
+
+        h2 {
+            margin-top: 20px;
+            color: #004466;
+        }
+
+        /* Paragraphs */
+        p {
+            margin: 15px 0;
+        }
+
+        /* Links */
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Images */
+        img {
+            display: block;
+            margin: 20px 0;
+            max-width: 100%;
+            height: auto;
+            border: 2px solid #ddd;
+            border-radius: 5px;
+        }
+
+        /* Footer */
+        footer {
+            margin-top: 30px;
+            padding: 15px;
+            text-align: center;
+            background-color: #eeeeee;
+            border-top: 1px solid #ccc;
+            font-size: 0.9em;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
     <header>
